Mensaje de bienvenida

--- a/ProyectoGrupo4/Views/Home/Index.cshtml
+++ b/ProyectoGrupo4/Views/Home/Index.cshtml
@@ -3,17 +3,23 @@
 }
 
 <main>
-    <section class="row" aria-labelledby="aspnetTitle">
+
+
+    <section class="row text-center" aria-labelledby="aspnetTitle">
         <h1 id="title">Tarea práctica #3</h1>
     </section>
 
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
+    <div class="row d-flex justify-content-center mt-4">
+        <section class="col-md-4 text-center">
             <h2 id="librariesTitle">Blog del grupo #4</h2>
             <p>
                 Esta práctica #3 es basada sobre lo pedido en el documento, donde se desarrolla el Blog.
             </p>
-            <p><a class="btn btn-outline-dark" href="https://github.com/LeandroC0/Practica3PrograAvanzada">GitHub &raquo;</a></p>
+            <p>
+                <a class="btn btn-outline-dark" href="https://github.com/LeandroC0/Practica3PrograAvanzada">
+                    GitHub &raquo;
+                </a>
+            </p>
         </section>
     </div>
 </main>
