--- a/ProyectoGrupo4/Views/Account/Register.cshtml
+++ b/ProyectoGrupo4/Views/Account/Register.cshtml
@@ -18,6 +18,15 @@
                 @Html.TextBoxFor(m => m.NombreUsuario, new { @class = "form-control" })
             </div>
         </div>
+
+        <div class="row">
+            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 col-form-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", type = "email" })
+            </div>
+        </div>
+
+
         <div class="row">
             @Html.LabelFor(m => m.Password, new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
