--- a/ProyectoGrupo4/Views/Home/Index.cshtml
+++ b/ProyectoGrupo4/Views/Home/Index.cshtml
@@ -1,23 +1,87 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Inicio";
 }
+
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    
+<style>
+    body, .card, .form-control, .btn, h2, p, label, .form-label {
+        font-family: "Rubik", sans-serif;
+    }
+    .carousel-item {
+        transition: transform 2s ease-in-out !important; /* Deslizamiento lento */
+    }
+
+    .carousel-image {
+        height: 400px;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+
+    .carousel-caption {
+        background: rgba(17, 33, 45, 0.7);
+        border-radius: 10px;
+        padding: 20px;
+    
+    }
+
+</style>
 
 <main>
 
+    <!-- Carrusel -->
+    <div id="blogCarousel" class="carousel slide mb-5" data-bs-ride="carousel" data-bs-interval="5000">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#blogCarousel" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#blogCarousel" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#blogCarousel" data-bs-slide-to="2"></button>
+        </div>
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://www.publicdomainpictures.net/pictures/120000/nahled/white-texture-background.jpg" class="d-block w-100 carousel-image" alt="Tecnología Web">
+                <div class="carousel-caption">
+                    <h5>Tecnologías Modernas</h5>
+                    <p>Desarrollamos este trabajo con ASP.NET MVC y Bootstrap</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://www.publicdomainpictures.net/pictures/120000/nahled/white-texture-background.jpg" class="d-block w-100 carousel-image" alt="Blog Interactivo">
+                <div class="carousel-caption">
+                    <h5>Blog Interactivo</h5>
+                    <p>Es posible compartir comentarios en la sección dedicada</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://www.publicdomainpictures.net/pictures/120000/nahled/white-texture-background.jpg" class="d-block w-100 carousel-image" alt="Código Abierto">
+                <div class="carousel-caption">
+                    <h5>Código Abierto</h5>
+                    <p>Proyecto disponible en GitHub</p>
+                </div>
+            </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#blogCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#blogCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>
+    </div>
+
 
     <section class="row text-center" aria-labelledby="aspnetTitle">
-        <h1 id="title">Tarea práctica #3</h1>
+        <h1 id="title">Página de Blogs</h1>
     </section>
 
     <div class="row d-flex justify-content-center mt-4">
         <section class="col-md-4 text-center">
-            <h2 id="librariesTitle">Blog del grupo #4</h2>
             <p>
-                Esta práctica #3 es basada sobre lo pedido en el documento, donde se desarrolla el Blog.
+                Esta práctica #3 es basada sobre lo solicitado para la práctica programada #3 de Programación Avanzada.
             </p>
             <p>
-                <a class="btn btn-outline-dark" href="https://github.com/LeandroC0/Practica3PrograAvanzada">
-                    GitHub &raquo;
+                <a class="btn btn-outline-dark" href="https://github.com/LeandroC0/Practica3PrograAvanzada" target="_blank" title="Ver en GitHub">
+                    <i class="fab fa-github fa-2x"></i>
                 </a>
             </p>
         </section>
